Move super() call